--- a/lab3/lab3_4.ipynb
+++ b/lab3/lab3_4.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 1807,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 1808,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 1809,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 1810,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 1811,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 1812,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 1813,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 1814,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,43 +180,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 1815,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Agent():\n",
-    "    def __init__(self, nim: Nim):\n",
+    "    def __init__(self, nim: Nim, num_tot_matches):\n",
     "        self.nim = nim          #to be update at each game\n",
     "        self.random_factor = 1  #at the begining is set to 1 -> 100 explore\n",
     "        self.learned = dict()    #key is the nim status (nim._rows) the value is a dict of ( key: ply, value: score) from previus games\n",
     "        self.current_move = dict()  #key is the nim status, value is the ply performed in the current game\n",
     "        self.num_matches = 0\n",
+    "        self.num_tot_matched = num_tot_matches\n",
     "\n",
     "    def play(self) -> Nimply:  #return a move\n",
     "        selected_ply = None\n",
     "        if random.random() > self.random_factor: # exploitation: select best move in same status situation if exists(score must be grater that 0)\n",
     "            if self.nim.print_state() in self.learned.keys():\n",
     "                moves = self.learned[self.nim.print_state()]\n",
-    "\n",
     "                best = None\n",
     "                max = 0\n",
     "                for move, score in moves.items():\n",
     "                    if score > max:\n",
+    "                        \n",
     "                        best = move\n",
     "                        max = score\n",
+    "                        \n",
     "                if best == None:\n",
     "                    selected_ply = pure_random(self.nim)\n",
     "                else:\n",
     "                    selected_ply = best\n",
+    "                    \n",
     "            else:\n",
     "                selected_ply = pure_random(self.nim)       \n",
     "        else:   #exploration\n",
     "            selected_ply = pure_random(self.nim) \n",
-    "\n",
-    "        self.current_move[self.nim.print_state()] = selected_ply  \n",
+    "        \n",
+    "        self.current_move[self.nim.print_state()] = selected_ply\n",
+    "        \n",
     "        return selected_ply\n",
     "\n",
-    "    def update_score(self, win):\n",
+    "    def update_score(self, win):    #in learned update score +1 if agent wins or -1 if loses\n",
+    "        self.random_factor = 1 -(self.num_matches/self.num_tot_matched) #update random factor for encrease the exploitation the matches prograssion\n",
+    "\n",
     "        for nim_state, move in self.current_move.items():\n",
     "            if nim_state in self.learned.keys():    \n",
     "                if move in self.learned[nim_state].keys():\n",
@@ -233,29 +239,31 @@
     "                if win:\n",
     "                    self.learned[nim_state] = {move: 1}\n",
     "                else:\n",
-    "                    self.learned[nim_state] = {move: -1}\n"
+    "                    self.learned[nim_state] = {move: -1}\n",
+    "                   \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 1816,
    "metadata": {},
    "outputs": [],
    "source": [
     "NUM_MATCHES_EVAL = 100\n",
     "NIM_SIZE = 5\n",
-    "NUM_MATCHES_TRAINING = 500\n",
-    "OPPONENT_TRAIN = gabriele\n",
+    "NUM_MATCHES_TRAINING = 5000\n",
+    "OPPONENT_TRAIN = [pure_random, enrico, gabriele, optimal_strategy]\n",
     "OPPONENT_EVAL = pure_random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 1817,
    "metadata": {},
    "outputs": [],
    "source": [
     "def training(robot):\n",
+    "    won=0\n",
     "    last_player_start = 1\n",
     "    for i in range(NUM_MATCHES_TRAINING):\n",
     "        nim = Nim(NIM_SIZE)\n",
@@ -265,20 +273,22 @@
     "        last_player_start = player\n",
     "        while nim:\n",
     "            if player == 0:\n",
-    "                ply = OPPONENT_TRAIN(nim)\n",
+    "                ply = OPPONENT_TRAIN[int(i//(NUM_MATCHES_TRAINING/4))](nim)  #select opponent starting from the silliest\n",
     "            else:\n",
     "                ply = robot.play()\n",
     "            nim.nimming(ply)\n",
     "            player = 1 - player\n",
     "        if player == 0: #robot win\n",
+    "            won+=1\n",
     "            robot.update_score(1)\n",
     "        else:   #robot lose\n",
-    "            robot.update_score(0)"
+    "            robot.update_score(0)\n",
+    "    print(\"won in training: \", won)        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 1818,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,18 +315,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 1819,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "\n",
     "def main():\n",
-    "    robot = Agent(None)\n",
+    "    robot = Agent(None, NUM_MATCHES_TRAINING)\n",
     "\n",
     "    training(robot)\n",
-    "\n",
-    "    robot.random_factor = 0 #only exploitatin\n",
+    "    \n",
+    "    robot.random_factor = 0 #only exploitation\n",
     "    res = evaluate(robot)\n",
     "    print(res)        \n",
     "\n"
@@ -324,14 +334,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 1820,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.48\n"
+      "won in training:  1075\n",
+      "0.54\n"
      ]
     }
    ],
