--- a/lab3/lab3_4.ipynb
+++ b/lab3/lab3_4.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1835,
+   "execution_count": 2059,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1836,
+   "execution_count": 2060,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1837,
+   "execution_count": 2061,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1838,
+   "execution_count": 2062,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1839,
+   "execution_count": 2063,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1840,
+   "execution_count": 2064,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1841,
+   "execution_count": 2065,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1842,
+   "execution_count": 2066,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1843,
+   "execution_count": 2067,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1844,
+   "execution_count": 2068,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,12 +253,12 @@
     "NIM_SIZE = 5\n",
     "NUM_MATCHES_TRAINING = 5000\n",
     "OPPONENT_TRAIN = [pure_random, enrico, gabriele, optimal_strategy]\n",
-    "OPPONENT_EVAL = pure_random"
+    "OPPONENT_EVAL = gabriele"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1845,
+   "execution_count": 2069,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1846,
+   "execution_count": 2070,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1847,
+   "execution_count": 2071,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,15 +334,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1848,
+   "execution_count": 2072,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "won in training:  1227\n",
-      "0.39\n"
+      "won in training:  1148\n",
+      "0.47\n"
      ]
     }
    ],
