--- a/lab3/lab3_3.ipynb
+++ b/lab3/lab3_3.ipynb
@@ -25,7 +25,8 @@
     "from typing import Callable\n",
     "from copy import deepcopy\n",
     "from itertools import accumulate\n",
-    "from operator import xor"
+    "from operator import xor\n",
+    "from anytree import Node, RenderTree"
    ]
   },
   {
@@ -176,7 +177,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def minmax(state: Nim) -> Nimply:\n",
+    "    data = cook_status(state)\n",
+    "    root = Node(state.rows)\n",
+    "    childs = []\n",
+    "    for ply in data[\"possible_moves\"]:\n",
+    "        r = state.rows\n",
+    "        r[ply[0]] = state.rows[ply[0]] - ply[1]\n",
+    "        childs.append(Node(r, parent=root))\n",
+    "    return pure_random(state)"
+   ]
   },
   {
    "cell_type": "code",
