--- a/lab3/lab3_3.ipynb
+++ b/lab3/lab3_3.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,43 +174,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def minmax(state: Nim) -> Nimply:\n",
-    "    data = cook_status(state)\n",
-    "    root = Node(state.rows)\n",
-    "    childs = []\n",
-    "    for ply in data[\"possible_moves\"]:\n",
-    "        r = state.rows\n",
-    "        r[ply[0]] = state.rows[ply[0]] - ply[1]\n",
-    "        childs.append(Node(r, parent=root))\n",
-    "    return pure_random(state)"
+    "class Agent():\n",
+    "    def __init__(self, state: Nim):\n",
+    "        self.nim = state\n",
+    "        self.tree = None\n",
+    "        \n",
+    "    def createTree(self):\n",
+    "        creation = True\n",
+    "        self.tree = Node('root', value = list(self.nim.rows))\n",
+    "        parents = [self.tree]\n",
+    "        childs = []\n",
+    "        level = 1\n",
+    "\n",
+    "        while creation:\n",
+    "            print(\"level:\", level)\n",
+    "            print(\"parents: \", parents)\n",
+    "            count_parents_no_child = 0\n",
+    "            for parent in parents:\n",
+    "                print(parent)\n",
+    "                moves = [(r, o) for r, c in enumerate(parent.value) for o in range(1, c + 1) ]\n",
+    "                print(\"moves\", moves)\n",
+    "                if len(moves) == 0:\n",
+    "                    count_parents_no_child+=1\n",
+    "                else:    \n",
+    "                    for ply in moves:\n",
+    "                        aus = parent.value.copy()\n",
+    "                        \n",
+    "                        aus[ply[0]] = (aus[ply[0]] - ply[1])\n",
+    "                        child = Node('child',value=aus, parent=parent)\n",
+    "                        childs.append(child)\n",
+    "            if count_parents_no_child == len(parents):\n",
+    "                creation = False #no more node to explore\n",
+    "            level+=1\n",
+    "            parents = childs  \n",
+    "            childs = []\n",
+    "        print(RenderTree(self.tree))    \n",
+    "\n",
+    "    \n",
+    "    def minmax(self) -> Nimply:\n",
+    "        \n",
+    "        if self.tree == None:\n",
+    "            self.createTree()\n",
+    "        else:\n",
+    "            for child in self.tree.children:\n",
+    "                if child.value == list(self.nim.rows):\n",
+    "                    self.tree = child\n",
+    "        \n",
+    "        return pure_random(self.nim)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "NUM_MATCHES = 10\n",
-    "NIM_SIZE = 10\n",
+    "NUM_MATCHES = 1\n",
+    "NIM_SIZE = 2\n",
     "\n",
     "\n",
-    "def evaluate(opponent: Callable, genome) -> float:\n",
+    "def evaluate(opponent: Callable) -> float:\n",
     "    won = 0\n",
-    "    last_player_start = 1\n",
+    "    last_player_start = 0\n",
     "    for m in range(NUM_MATCHES):\n",
     "        nim = Nim(NIM_SIZE)\n",
+    "        agent = Agent(nim)\n",
     "        player = 1 - last_player_start\n",
     "        last_player_start = player\n",
     "        while nim:\n",
     "            if player == 0:\n",
     "                ply = opponent(nim)\n",
     "            else:\n",
-    "                ply = hard_coded_strategy(nim, genome)\n",
+    "                ply = agent.minmax()\n",
     "            nim.nimming(ply)\n",
     "            player = 1 - player\n",
     "        if player == 0:\n",
@@ -221,28 +260,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "level: 1\n",
+      "parents:  [Node('/root', value=[1, 3])]\n",
+      "Node('/root', value=[1, 3])\n",
+      "moves [(0, 1), (1, 1), (1, 2), (1, 3)]\n",
+      "level: 2\n",
+      "parents:  [Node('/root/child', value=[0, 3]), Node('/root/child', value=[1, 2]), Node('/root/child', value=[1, 1]), Node('/root/child', value=[1, 0])]\n",
+      "Node('/root/child', value=[0, 3])\n",
+      "moves [(1, 1), (1, 2), (1, 3)]\n",
+      "Node('/root/child', value=[1, 2])\n",
+      "moves [(0, 1), (1, 1), (1, 2)]\n",
+      "Node('/root/child', value=[1, 1])\n",
+      "moves [(0, 1), (1, 1)]\n",
+      "Node('/root/child', value=[1, 0])\n",
+      "moves [(0, 1)]\n",
+      "level: 3\n",
+      "parents:  [Node('/root/child/child', value=[0, 2]), Node('/root/child/child', value=[0, 1]), Node('/root/child/child', value=[0, 0]), Node('/root/child/child', value=[0, 2]), Node('/root/child/child', value=[1, 1]), Node('/root/child/child', value=[1, 0]), Node('/root/child/child', value=[0, 1]), Node('/root/child/child', value=[1, 0]), Node('/root/child/child', value=[0, 0])]\n",
+      "Node('/root/child/child', value=[0, 2])\n",
+      "moves [(1, 1), (1, 2)]\n",
+      "Node('/root/child/child', value=[0, 1])\n",
+      "moves [(1, 1)]\n",
+      "Node('/root/child/child', value=[0, 0])\n",
+      "moves []\n",
+      "Node('/root/child/child', value=[0, 2])\n",
+      "moves [(1, 1), (1, 2)]\n",
+      "Node('/root/child/child', value=[1, 1])\n",
+      "moves [(0, 1), (1, 1)]\n",
+      "Node('/root/child/child', value=[1, 0])\n",
+      "moves [(0, 1)]\n",
+      "Node('/root/child/child', value=[0, 1])\n",
+      "moves [(1, 1)]\n",
+      "Node('/root/child/child', value=[1, 0])\n",
+      "moves [(0, 1)]\n",
+      "Node('/root/child/child', value=[0, 0])\n",
+      "moves []\n",
+      "level: 4\n",
+      "parents:  [Node('/root/child/child/child', value=[0, 1]), Node('/root/child/child/child', value=[0, 0]), Node('/root/child/child/child', value=[0, 0]), Node('/root/child/child/child', value=[0, 1]), Node('/root/child/child/child', value=[0, 0]), Node('/root/child/child/child', value=[0, 1]), Node('/root/child/child/child', value=[1, 0]), Node('/root/child/child/child', value=[0, 0]), Node('/root/child/child/child', value=[0, 0]), Node('/root/child/child/child', value=[0, 0])]\n",
+      "Node('/root/child/child/child', value=[0, 1])\n",
+      "moves [(1, 1)]\n",
+      "Node('/root/child/child/child', value=[0, 0])\n",
+      "moves []\n",
+      "Node('/root/child/child/child', value=[0, 0])\n",
+      "moves []\n",
+      "Node('/root/child/child/child', value=[0, 1])\n",
+      "moves [(1, 1)]\n",
+      "Node('/root/child/child/child', value=[0, 0])\n",
+      "moves []\n",
+      "Node('/root/child/child/child', value=[0, 1])\n",
+      "moves [(1, 1)]\n",
+      "Node('/root/child/child/child', value=[1, 0])\n",
+      "moves [(0, 1)]\n",
+      "Node('/root/child/child/child', value=[0, 0])\n",
+      "moves []\n",
+      "Node('/root/child/child/child', value=[0, 0])\n",
+      "moves []\n",
+      "Node('/root/child/child/child', value=[0, 0])\n",
+      "moves []\n",
+      "level: 5\n",
+      "parents:  [Node('/root/child/child/child/child', value=[0, 0]), Node('/root/child/child/child/child', value=[0, 0]), Node('/root/child/child/child/child', value=[0, 0]), Node('/root/child/child/child/child', value=[0, 0])]\n",
+      "Node('/root/child/child/child/child', value=[0, 0])\n",
+      "moves []\n",
+      "Node('/root/child/child/child/child', value=[0, 0])\n",
+      "moves []\n",
+      "Node('/root/child/child/child/child', value=[0, 0])\n",
+      "moves []\n",
+      "Node('/root/child/child/child/child', value=[0, 0])\n",
+      "moves []\n",
+      "Node('/root', value=[1, 3])\n",
+      "├── Node('/root/child', value=[0, 3])\n",
+      "│   ├── Node('/root/child/child', value=[0, 2])\n",
+      "│   │   ├── Node('/root/child/child/child', value=[0, 1])\n",
+      "│   │   │   └── Node('/root/child/child/child/child', value=[0, 0])\n",
+      "│   │   └── Node('/root/child/child/child', value=[0, 0])\n",
+      "│   ├── Node('/root/child/child', value=[0, 1])\n",
+      "│   │   └── Node('/root/child/child/child', value=[0, 0])\n",
+      "│   └── Node('/root/child/child', value=[0, 0])\n",
+      "├── Node('/root/child', value=[1, 2])\n",
+      "│   ├── Node('/root/child/child', value=[0, 2])\n",
+      "│   │   ├── Node('/root/child/child/child', value=[0, 1])\n",
+      "│   │   │   └── Node('/root/child/child/child/child', value=[0, 0])\n",
+      "│   │   └── Node('/root/child/child/child', value=[0, 0])\n",
+      "│   ├── Node('/root/child/child', value=[1, 1])\n",
+      "│   │   ├── Node('/root/child/child/child', value=[0, 1])\n",
+      "│   │   │   └── Node('/root/child/child/child/child', value=[0, 0])\n",
+      "│   │   └── Node('/root/child/child/child', value=[1, 0])\n",
+      "│   │       └── Node('/root/child/child/child/child', value=[0, 0])\n",
+      "│   └── Node('/root/child/child', value=[1, 0])\n",
+      "│       └── Node('/root/child/child/child', value=[0, 0])\n",
+      "├── Node('/root/child', value=[1, 1])\n",
+      "│   ├── Node('/root/child/child', value=[0, 1])\n",
+      "│   │   └── Node('/root/child/child/child', value=[0, 0])\n",
+      "│   └── Node('/root/child/child', value=[1, 0])\n",
+      "│       └── Node('/root/child/child/child', value=[0, 0])\n",
+      "└── Node('/root/child', value=[1, 0])\n",
+      "    └── Node('/root/child/child', value=[0, 0])\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.8"
+       "0.0"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "evaluate(enrico, (0.5,0.5,0.5)) "
+    "evaluate(enrico) "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -256,11 +395,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
    }
   }
  },
