--- a/lab3/lab3_4.ipynb
+++ b/lab3/lab3_4.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2087,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2088,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2089,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2090,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2091,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2092,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2093,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2094,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2095,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
     "        return selected_ply\n",
     "\n",
     "    def update_score(self, win):    #in learned update score +1 if agent wins or -1 if loses\n",
-    "        self.random_factor = 1 -(self.num_matches/self.num_tot_matched) #update random factor for encrease the exploitation the matches prograssion\n",
+    "        self.random_factor = 1 -2*(self.num_matches/self.num_tot_matched) #update random factor for encrease the exploitation the matches prograssion\n",
     "\n",
     "        for nim_state, move in self.current_move.items():\n",
     "            if nim_state in self.learned.keys():    \n",
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2096,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,12 +253,12 @@
     "NIM_SIZE = 5\n",
     "NUM_MATCHES_TRAINING = 5000\n",
     "OPPONENT_TRAIN = [pure_random, enrico, gabriele, optimal_strategy]\n",
-    "OPPONENT_EVAL = gabriele"
+    "OPPONENT_EVAL = enrico"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2097,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
     "        last_player_start = player\n",
     "        while nim:\n",
     "            if player == 0:\n",
-    "                ply = OPPONENT_TRAIN[int(i//(NUM_MATCHES_TRAINING/4))](nim)  #select opponent starting from the silliest\n",
+    "                ply = OPPONENT_TRAIN[int(i//(NUM_MATCHES_TRAINING/len(OPPONENT_TRAIN)))](nim)  #select opponent starting from the silliest\n",
     "            else:\n",
     "                ply = robot.play()\n",
     "            nim.nimming(ply)\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2098,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2099,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,15 +334,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2100,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "won in training:  1097\n",
-      "0.33\n"
+      "won in training:  1168\n",
+      "0.14\n"
      ]
     }
    ],
@@ -353,7 +353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -367,11 +367,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
    }
   }
  },
