--- a/lab3/lab3_3.ipynb
+++ b/lab3/lab3_3.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "from copy import deepcopy\n",
     "from itertools import accumulate\n",
     "from operator import xor\n",
-    "from anytree import Node, RenderTree"
+    "from anytree import Node, RenderTree, search"
    ]
   },
   {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,13 +155,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [],
    "source": [
     "def optimal_strategy(state: Nim) -> Nimply:\n",
     "    data = cook_status(state)\n",
     "    return next((bf for bf in data[\"brute_force\"] if bf[1] == 0), random.choice(data[\"brute_force\"]))[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 429,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NUM_MATCHES = 1\n",
+    "NIM_SIZE = 3"
    ]
   },
   {
@@ -174,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,15 +199,15 @@
     "        parents = [self.tree]\n",
     "        childs = []\n",
     "        level = 1\n",
-    "\n",
+    "        my_turn = True\n",
     "        while creation:\n",
-    "            print(\"level:\", level)\n",
-    "            print(\"parents: \", parents)\n",
+    "            #print(\"level:\", level)\n",
+    "            #print(\"parents: \", parents)\n",
     "            count_parents_no_child = 0\n",
     "            for parent in parents:\n",
-    "                print(parent)\n",
+    "                #print(parent)\n",
     "                moves = [(r, o) for r, c in enumerate(parent.value) for o in range(1, c + 1) ]\n",
-    "                print(\"moves\", moves)\n",
+    "                #print(\"moves\", moves)\n",
     "                if len(moves) == 0:\n",
     "                    count_parents_no_child+=1\n",
     "                else:    \n",
@@ -205,37 +215,43 @@
     "                        aus = parent.value.copy()\n",
     "                        \n",
     "                        aus[ply[0]] = (aus[ply[0]] - ply[1])\n",
-    "                        child = Node('child',value=aus, parent=parent)\n",
+    "                        child = Node(level,value=aus, after_me=level%2, parent=parent)\n",
     "                        childs.append(child)\n",
     "            if count_parents_no_child == len(parents):\n",
     "                creation = False #no more node to explore\n",
     "            level+=1\n",
+    "            my_turn != my_turn\n",
     "            parents = childs  \n",
     "            childs = []\n",
-    "        print(RenderTree(self.tree))    \n",
+    "        #print(RenderTree(self.tree))    \n",
     "\n",
-    "    \n",
+    "    def findMybestNextMove(self, root: Node) -> Nimply:\n",
+    "        d = search.findall(root, filter_=lambda node: node.value == [0]*NIM_SIZE and node.after_me == 1)\n",
+    "        best = min(d, key=lambda n: n.name)[0]\n",
+    "        \n",
+    "\n",
+    "        return pure_random(self.nim)\n",
+    "\n",
     "    def minmax(self) -> Nimply:\n",
     "        \n",
     "        if self.tree == None:\n",
-    "            self.createTree()\n",
+    "            self.createTree()       #create tree for first time\n",
     "        else:\n",
-    "            for child in self.tree.children:\n",
+    "            for child in self.tree.children:            #updaate tree root with the current nim state\n",
     "                if child.value == list(self.nim.rows):\n",
     "                    self.tree = child\n",
+    "\n",
+    "        self.findMybestNextMove(self.tree)            \n",
     "        \n",
     "        return pure_random(self.nim)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [],
    "source": [
-    "NUM_MATCHES = 1\n",
-    "NIM_SIZE = 2\n",
-    "\n",
     "\n",
     "def evaluate(opponent: Callable) -> float:\n",
     "    won = 0\n",
@@ -260,116 +276,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "level: 1\n",
-      "parents:  [Node('/root', value=[1, 3])]\n",
-      "Node('/root', value=[1, 3])\n",
-      "moves [(0, 1), (1, 1), (1, 2), (1, 3)]\n",
-      "level: 2\n",
-      "parents:  [Node('/root/child', value=[0, 3]), Node('/root/child', value=[1, 2]), Node('/root/child', value=[1, 1]), Node('/root/child', value=[1, 0])]\n",
-      "Node('/root/child', value=[0, 3])\n",
-      "moves [(1, 1), (1, 2), (1, 3)]\n",
-      "Node('/root/child', value=[1, 2])\n",
-      "moves [(0, 1), (1, 1), (1, 2)]\n",
-      "Node('/root/child', value=[1, 1])\n",
-      "moves [(0, 1), (1, 1)]\n",
-      "Node('/root/child', value=[1, 0])\n",
-      "moves [(0, 1)]\n",
-      "level: 3\n",
-      "parents:  [Node('/root/child/child', value=[0, 2]), Node('/root/child/child', value=[0, 1]), Node('/root/child/child', value=[0, 0]), Node('/root/child/child', value=[0, 2]), Node('/root/child/child', value=[1, 1]), Node('/root/child/child', value=[1, 0]), Node('/root/child/child', value=[0, 1]), Node('/root/child/child', value=[1, 0]), Node('/root/child/child', value=[0, 0])]\n",
-      "Node('/root/child/child', value=[0, 2])\n",
-      "moves [(1, 1), (1, 2)]\n",
-      "Node('/root/child/child', value=[0, 1])\n",
-      "moves [(1, 1)]\n",
-      "Node('/root/child/child', value=[0, 0])\n",
-      "moves []\n",
-      "Node('/root/child/child', value=[0, 2])\n",
-      "moves [(1, 1), (1, 2)]\n",
-      "Node('/root/child/child', value=[1, 1])\n",
-      "moves [(0, 1), (1, 1)]\n",
-      "Node('/root/child/child', value=[1, 0])\n",
-      "moves [(0, 1)]\n",
-      "Node('/root/child/child', value=[0, 1])\n",
-      "moves [(1, 1)]\n",
-      "Node('/root/child/child', value=[1, 0])\n",
-      "moves [(0, 1)]\n",
-      "Node('/root/child/child', value=[0, 0])\n",
-      "moves []\n",
-      "level: 4\n",
-      "parents:  [Node('/root/child/child/child', value=[0, 1]), Node('/root/child/child/child', value=[0, 0]), Node('/root/child/child/child', value=[0, 0]), Node('/root/child/child/child', value=[0, 1]), Node('/root/child/child/child', value=[0, 0]), Node('/root/child/child/child', value=[0, 1]), Node('/root/child/child/child', value=[1, 0]), Node('/root/child/child/child', value=[0, 0]), Node('/root/child/child/child', value=[0, 0]), Node('/root/child/child/child', value=[0, 0])]\n",
-      "Node('/root/child/child/child', value=[0, 1])\n",
-      "moves [(1, 1)]\n",
-      "Node('/root/child/child/child', value=[0, 0])\n",
-      "moves []\n",
-      "Node('/root/child/child/child', value=[0, 0])\n",
-      "moves []\n",
-      "Node('/root/child/child/child', value=[0, 1])\n",
-      "moves [(1, 1)]\n",
-      "Node('/root/child/child/child', value=[0, 0])\n",
-      "moves []\n",
-      "Node('/root/child/child/child', value=[0, 1])\n",
-      "moves [(1, 1)]\n",
-      "Node('/root/child/child/child', value=[1, 0])\n",
-      "moves [(0, 1)]\n",
-      "Node('/root/child/child/child', value=[0, 0])\n",
-      "moves []\n",
-      "Node('/root/child/child/child', value=[0, 0])\n",
-      "moves []\n",
-      "Node('/root/child/child/child', value=[0, 0])\n",
-      "moves []\n",
-      "level: 5\n",
-      "parents:  [Node('/root/child/child/child/child', value=[0, 0]), Node('/root/child/child/child/child', value=[0, 0]), Node('/root/child/child/child/child', value=[0, 0]), Node('/root/child/child/child/child', value=[0, 0])]\n",
-      "Node('/root/child/child/child/child', value=[0, 0])\n",
-      "moves []\n",
-      "Node('/root/child/child/child/child', value=[0, 0])\n",
-      "moves []\n",
-      "Node('/root/child/child/child/child', value=[0, 0])\n",
-      "moves []\n",
-      "Node('/root/child/child/child/child', value=[0, 0])\n",
-      "moves []\n",
-      "Node('/root', value=[1, 3])\n",
-      "├── Node('/root/child', value=[0, 3])\n",
-      "│   ├── Node('/root/child/child', value=[0, 2])\n",
-      "│   │   ├── Node('/root/child/child/child', value=[0, 1])\n",
-      "│   │   │   └── Node('/root/child/child/child/child', value=[0, 0])\n",
-      "│   │   └── Node('/root/child/child/child', value=[0, 0])\n",
-      "│   ├── Node('/root/child/child', value=[0, 1])\n",
-      "│   │   └── Node('/root/child/child/child', value=[0, 0])\n",
-      "│   └── Node('/root/child/child', value=[0, 0])\n",
-      "├── Node('/root/child', value=[1, 2])\n",
-      "│   ├── Node('/root/child/child', value=[0, 2])\n",
-      "│   │   ├── Node('/root/child/child/child', value=[0, 1])\n",
-      "│   │   │   └── Node('/root/child/child/child/child', value=[0, 0])\n",
-      "│   │   └── Node('/root/child/child/child', value=[0, 0])\n",
-      "│   ├── Node('/root/child/child', value=[1, 1])\n",
-      "│   │   ├── Node('/root/child/child/child', value=[0, 1])\n",
-      "│   │   │   └── Node('/root/child/child/child/child', value=[0, 0])\n",
-      "│   │   └── Node('/root/child/child/child', value=[1, 0])\n",
-      "│   │       └── Node('/root/child/child/child/child', value=[0, 0])\n",
-      "│   └── Node('/root/child/child', value=[1, 0])\n",
-      "│       └── Node('/root/child/child/child', value=[0, 0])\n",
-      "├── Node('/root/child', value=[1, 1])\n",
-      "│   ├── Node('/root/child/child', value=[0, 1])\n",
-      "│   │   └── Node('/root/child/child/child', value=[0, 0])\n",
-      "│   └── Node('/root/child/child', value=[1, 0])\n",
-      "│       └── Node('/root/child/child/child', value=[0, 0])\n",
-      "└── Node('/root/child', value=[1, 0])\n",
-      "    └── Node('/root/child/child', value=[0, 0])\n"
+      "Node('/root/1/2/3', after_me=1, value=[0, 0, 0])\n",
+      "Node('/root/1/2/3', after_me=1, value=[0, 0, 0])\n",
+      "Node('/root/1/2/3', after_me=1, value=[0, 0, 0])\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "1.0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 432,
      "metadata": {},
      "output_type": "execute_result"
     }
